Add browserslist + IE 11 support

--- a/src/static/index.html
+++ b/src/static/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="chrome-webstore-item" href="https://chrome.google.com/webstore/detail/efdjhmbmjlhomjhnnmpeeillhpnldoje">
-  <script src="webrtc-ie-shim.js"></script>
+  <script src="https://cdn.voxeet.com/ie11/webrtc-ie-shim.js"></script>
 </head>
 
 <body>
