--- a/src/static/index.html
+++ b/src/static/index.html
@@ -1,15 +1,16 @@
 <html>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link
+      rel="chrome-webstore-item"
+      href="https://chrome.google.com/webstore/detail/efdjhmbmjlhomjhnnmpeeillhpnldoje"
+    />
+    <script src="https://cdn.voxeet.com/ie11/webrtc-ie-shim.js"></script>
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="chrome-webstore-item" href="https://chrome.google.com/webstore/detail/efdjhmbmjlhomjhnnmpeeillhpnldoje">
-  <script src="https://cdn.voxeet.com/ie11/webrtc-ie-shim.js"></script>
-</head>
-
-<body>
-  <div id="app"></div>
-</body>
-
+  <body>
+    <div id="app"></div>
+  </body>
 </html>
